--- a/src/Themes/Laser.ECommerce/Views/AddressForm.cshtml
+++ b/src/Themes/Laser.ECommerce/Views/AddressForm.cshtml
@@ -10,7 +10,7 @@
     string prefix = Model.Prefix;
     AddressEditViewModel address = Model.Address;
     List<AddressRecord> addressList = Model.ListAddress;
-    string idListAddress = prefix + ".ListAddress";
+    string idListAddress = prefix + "ListAddress";
 
     // prefix of elements that will be copied to the ones for this
     // address when this ones are hidden away
