fix member name in ApplePay configuration

--- a/src/Modules/Laser.Orchard.Braintree/Views/BraintreeDropin.cshtml
+++ b/src/Modules/Laser.Orchard.Braintree/Views/BraintreeDropin.cshtml
@@ -194,7 +194,7 @@
                     {
                         applePay: {
                             displayName: '@apDisplayName',
-                            paymentRequests: {
+                            paymentRequest: {
                                 total: {
                                     label: '@apLabel',
                                     amount: '@viewModel.Record.Amount.ToString("0.00", System.Globalization.CultureInfo.InvariantCulture)'
