--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/ProductPriceWithVATEditor.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/ProductPriceWithVATEditor.cshtml
@@ -16,52 +16,54 @@
     var guidBase = Guid.NewGuid().ToString();
     var regularFieldsetGuid = "rf" + guidBase;
     var regularTaxableGuid = "rt" + guidBase;
-    var regularTaxedGuid = "rv" + guidBase;
+    //var regularTaxedGuid = "rv" + guidBase;
     var discountFieldsetGuid = "df" + guidBase;
     var discountTaxableGuid = "dt" + guidBase;
-    var discountTaxedGuid = "dv" + guidBase;
+    //var discountTaxedGuid = "dv" + guidBase;
     var hintGuid = "hint" + guidBase;
 
     //var currentCulture = CultureInfo.GetCultureInfo(WorkContext.CurrentCulture);
     var decimalSeparator = CultureInfo.CurrentUICulture.NumberFormat.CurrencyDecimalSeparator;
 
 
-<fieldset>
-    <label class="form-text text-muted">
-        @T("Edit the prices after tax.")
-    </label>
-    <fieldset id="@regularFieldsetGuid">
-        <div class="form-group">
-            <label>@T("Regular price (after VAT)")</label>
-            <input class="form-control text small"
-                   type="text"
-                   id="@regularTaxedGuid"
-                   value="@(Model.BaseTaxedPrice)">
-
-            <small class="form-text text-muted" id="@regularTaxableGuid">
-
-            </small>
-        </div>
-    </fieldset>
-    @if (Model.HasDiscount) {
-        <fieldset id="@discountFieldsetGuid">
+    <fieldset>
+        <label class="form-text text-muted">
+            @T("Edit the prices after tax.")
+        </label>
+        <fieldset id="@regularFieldsetGuid">
             <div class="form-group">
-                <label>@T("Discounted Price (after VAT)")</label>
-                <input class="form-control text small"
-                       type="text"
-                       id="@discountTaxedGuid"
-                       value="@(Model.DiscountPrice >= 0.0m ? Model.DiscountTaxedPrice.ToString() : "")">
+                <label>@T("Regular price (after VAT)")</label>
+                @Html.HiddenFor(m => m.BasePrice)
 
-                <small class="form-text text-muted" id="@discountTaxableGuid">
+                @Html.TextBoxFor(m => m.BaseTaxedPrice, new { @class = "form-control text small" })
+
+                <small class="form-text text-muted" id="@regularTaxableGuid">
 
                 </small>
             </div>
         </fieldset>
-    }
-    <small class="form-text text-muted" id="@hintGuid">
+        @if (Model.HasDiscount) {
+            <fieldset id="@discountFieldsetGuid">
+                <div class="form-group">
+                    <label>@T("Discounted Price (after VAT)")</label>
 
-    </small>
-</fieldset>
+                    @Html.HiddenFor(m => m.DiscountPrice, new { @Value = (Model.DiscountPrice >= 0.0m ? Model.DiscountPrice.ToString() : "") })
+
+                    @Html.TextBoxFor(m => m.DiscountTaxedPrice, new { @class = "form-control text small", @Value = (Model.DiscountPrice >= 0.0m ? Model.DiscountTaxedPrice.ToString() : "") })
+
+                    <small class="form-text text-muted" id="@discountTaxableGuid">
+
+                    </small>
+                </div>
+            </fieldset>
+        }
+        <small class="form-text text-muted" id="@hintGuid">
+
+        </small>
+
+        @Html.HiddenFor(m => m.SelectedVatConfigurationId)
+
+    </fieldset>
 
     using (Script.Foot()) {
 
@@ -84,7 +86,10 @@
             var hintElement = $('#@hintGuid');
             // regular price inputs
             var regularBasePrice = $('#@regularTaxableGuid');
-            var regularTaxedPrice = $('#@regularTaxedGuid');
+            var regularTaxedPrice = $('#@Model.BaseTaxedPriceId');
+
+			// default vat id
+            $('#@Model.SelectedVatConfigurationIdHidden').val(vatConfigDropDown.val());
 
             // hide original prices and their labels
             originalPrice.hide();
@@ -96,7 +101,7 @@
                 var discountPrice = $('#@Model.DiscountPriceId');
                 // discount price inputs
                 var discountBasePrice = $('#@discountTaxableGuid');
-                var discountTaxedPrice = $('#@discountTaxedGuid');
+                var discountTaxedPrice = $('#@Model.DiscountTaxedPriceId');
 
                 discountPrice.hide();
                 $('[for="@Model.DiscountPriceId"]').hide()
@@ -137,6 +142,8 @@
                     var v = value.toString().replace('.', '@decimalSeparator');
                     regularBasePrice.text(priceBaseText.replace('__PRICE__', v));
                     originalPrice.val(v);
+
+                    $('#@Model.BasePriceIdVM').val(v);
                 }
             }
 
@@ -159,6 +166,8 @@
                         discountBasePrice.text('');
                         discountPrice.val('');
                     }
+
+                    $('#@Model.DiscountPriceIdVM').val(discountPrice.val());
                 }
                 </text>
             }
@@ -181,6 +190,9 @@
                 UpdateBasePrices()
                 // re update hint text
                 UpdateHint();
+
+				// selected vat id
+                $('#@Model.SelectedVatConfigurationIdHidden').val($(this).val());
             });
             regularTaxedPrice.on('change', function () {
                 // recompute prices before tax
