Added attribute to fieldset to allow other shapes to find it

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/AddressEditViewModel.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/AddressEditViewModel.cshtml
@@ -64,7 +64,7 @@
                placeholder="@(placeholder != null ? placeholder.Text : "")" />
     </div>
 }
-<fieldset class="address-editor" id="@guid">
+<fieldset class="address-editor" id="@guid" data-address-type="@Model.AddressType.ToString().ToLowerInvariant()">
     <legend>@addressTypeTitle</legend>
     @* Personal information *@
     <div class="row">
