Upgrade to translator module to handle translations for tenants

--- a/src/Modules/Laser.Orchard.Translator/Views/TranslatorTree/Index.cshtml
+++ b/src/Modules/Laser.Orchard.Translator/Views/TranslatorTree/Index.cshtml
@@ -141,7 +141,7 @@
 
                 if (selectedNodes.length == 0 || selectedNodes[0].parents.length < 2)
                 {
-                    alert("@T("Please select a module or a theme.")");
+                    alert("@T("Please select a module, a theme or a tenant.")");
                     return false;
                 }
 
