WIP required policies for checkout
Removed deprecated AddressesController.Index action
Started adding stuff to have required checkout policies, following a similar
logic and structure as what's done for registration.

--- a/src/Themes/Laser.ECommerce/Views/Addresses/index.cshtml
+++ b/src/Themes/Laser.ECommerce/Views/Addresses/index.cshtml
@@ -1,6 +1,8 @@
 ﻿@model Laser.Orchard.NwazetIntegration.ViewModels.AddressesVM
 @using System.Web.Mvc;
 @{
+    // TODO: update this theme to use the correct checkout flow, then delete this file
+
     var title = Layout.Title = T("Checkout: Shipping & Billing Addresses");
     Script.Require("jQuery");
     Script.Include("ship.js");
