--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/Pos.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/Pos.cshtml
@@ -1,3 +1,12 @@
-﻿@using (Html.BeginFormAntiForgeryPost(Url.Action("Index", "Addresses", new { area = "Laser.Orchard.NwazetIntegration" }))) {
+﻿@{ 
+
+    var formId = "form" + Guid.NewGuid().ToString()
+        // get the first part of the guid
+        .Split(new char[] { '-' })[0];
+}
+
+@using (Html.BeginFormAntiForgeryPost(
+    Url.Action("CheckoutStart", "Checkout", new { area = "Laser.Orchard.NwazetIntegration" }),
+    FormMethod.Post, new { @id = formId })) {
     <button type="submit" id="payButton" style="padding: 10px 10px">@T("Checkout")</button>
 }
