- removed jquery dependency from fullcalendar - added SetVersion to ResourceManifest

--- a/src/Modules/Laser.Orchard.Events/Views/Parts/Calendar.cshtml
+++ b/src/Modules/Laser.Orchard.Events/Views/Parts/Calendar.cshtml
@@ -3,6 +3,7 @@
 
 @{
     Style.Require("FullCalendar");
+    Script.Require("jQuery");
     Script.Require("FullCalendar");
 
     using (Script.Foot()) {
