--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/CheckoutPoliciesCheckoutStartShape.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/CheckoutPoliciesCheckoutStartShape.cshtml
@@ -43,7 +43,9 @@ if (policy.Accepted) {
                 @T("(optional) I have read and agree to {0}", Html.ItemDisplayLink(policy.PolicyText))
             </label>
         }
-        @Html.ValidationMessage(inputName)
+        @Html.ValidationMessage(inputName,
+            htmlAttributes: new { @class="field-validation-error" },
+            tag: "div")
     </div>
 }
 }
