add data-call-type logic

--- a/src/Themes/Laser.ECommerce/Views/Parts/Product.AddToCartFromWishList.cshtml
+++ b/src/Themes/Laser.ECommerce/Views/Parts/Product.AddToCartFromWishList.cshtml
@@ -11,6 +11,7 @@
                     FormMethod.Post,
                     new Dictionary<string, object> {
                         {"data-form-role","addtocart" },
+                        { "data-call-type", "" },
                         {"enctype", "multipart/form-data"}
                     })) {
     <div class="wishlist-addtocart-button">
