--- a/src/Themes/Laser.ECommerce/Views/Parts/ProductPart.AddButton.cshtml
+++ b/src/Themes/Laser.ECommerce/Views/Parts/ProductPart.AddButton.cshtml
@@ -12,6 +12,7 @@
         {"class", "addtocart"},
         {"data-productid", productId},
         {"data-form-role","addtocart" },
+        { "data-call-type", "ajax" },
         {"enctype", "multipart/form-data"}
                 })) {
     if (Model.ProductAttributes != null) {
