--- a/src/Modules/Laser.Orchard.SecureData/Views/EditorTemplates/Fields/EncryptedStringField.Edit.cshtml
+++ b/src/Modules/Laser.Orchard.SecureData/Views/EditorTemplates/Fields/EncryptedStringField.Edit.cshtml
@@ -2,25 +2,28 @@
 
 @model EncryptedStringFieldEditViewModel
 
-@{ 
+@{
     var inputType = Model.Settings.IsVisible ? "text" : "password";
+
+    // If Value is Required, but it is not Visible and already has a Value, Value input isn't required anymore.
+    bool required = Model.Settings.Required;
+    if (required) {
+        if (!Model.Settings.IsVisible && Model.HasValue) {
+            required = false;
+        }
+    }
 }
 
 <fieldset>
     <div class="form-group">
         <label for="@Html.FieldIdFor(m=>m.Value)">@Model.DisplayName</label>
-        <input type="@inputType" id="@Html.FieldIdFor(m=>m.Value)" 
+        <input type="@inputType" id="@Html.FieldIdFor(m=>m.Value)"
                name="@Html.FieldNameFor(m=>m.Value)"
                class="form-control"
-               @if (Model.Settings.Required)
-               {
-                   <text>required</text>
+               @if (required) { <text> required</text>
                }
-               @if (!string.IsNullOrWhiteSpace(Model.Settings.Pattern))
-               {
-                   <text>pattern="@Model.Settings.Pattern"</text>
-               }
-               />
+               @if (!string.IsNullOrWhiteSpace(Model.Settings.Pattern)) { <text> pattern="@Model.Settings.Pattern" </text> }
+               @if (Model.Settings.IsVisible) { <text> value="@Model.Value" </text> } />
     </div>
     @if (Model.Settings.ConfirmRequired) {
         <div class="form-group">
@@ -28,20 +31,30 @@
             <input type="@inputType" id="@Html.FieldIdFor(m => m.ConfirmValue)"
                    name="@Html.FieldNameFor(m => m.ConfirmValue)"
                    class="form-control"
-                   @if (Model.Settings.Required) { <text> required</text>
+                   @if (required) { <text> required</text>
                    }
-                   @if (!string.IsNullOrWhiteSpace(Model.Settings.Pattern)) {
-                       <text> pattern="@Model.Settings.Pattern" </text>  
-                   }
-                   />
+                   @if (!string.IsNullOrWhiteSpace(Model.Settings.Pattern)) { <text> pattern="@Model.Settings.Pattern" </text> } />
         </div>
     }
-    @if (!string.IsNullOrWhiteSpace(Model.Settings.Hint))
-    {
+    @if (!Model.Settings.Required && !Model.Settings.IsVisible) {
+        <div>
+            @Html.CheckBoxFor(m => m.SaveIfEmpty) <label for="@Html.FieldIdFor(m => m.SaveIfEmpty)" class="forcheckbox">@T("SaveIfEmpty")</label>
+            <span class="hint">@T("Save value even if it's empty.")</span>
+        </div>
+    }
+    @if (!Model.Settings.IsVisible) {
+        <span class="hint">
+            @if (Model.HasValue) {
+                @T("There already is a value saved in the field.");
+            } else {
+                @T("There is no value saved in the field.");
+            }
+        </span>
+    }
+    @if (!string.IsNullOrWhiteSpace(Model.Settings.Hint)) {
         <span class="hint">@Model.Settings.Hint</span>
     }
-    @if (!string.IsNullOrWhiteSpace(Model.Settings.Pattern))
-    {
+    @if (!string.IsNullOrWhiteSpace(Model.Settings.Pattern)) {
         <span class="hint">@T("Pattern: {0}", Model.Settings.Pattern)</span>
     }
 </fieldset>
