--- a/src/Themes/KrakeAdmin/Styles/krakeadmin.css
+++ b/src/Themes/KrakeAdmin/Styles/krakeadmin.css
@@ -11750,3 +11750,8 @@ select:focus, textarea:focus, input.text:focus, input.text-box:focus, input.text
 .gm-style button, .gm-style a.button {
     color: rgb(0, 0, 0) !important;
 }
+
+/* Red text for validation error hints. */
+.field-validation-error {
+    color: #dd4b39; /* This is the same red used for validation errors in the header of the page. */
+}
