manage more complex product availability conditions in UI

--- a/src/Themes/Laser.ECommerce/Views/Parts/Product.AddToCartFromWishList.cshtml
+++ b/src/Themes/Laser.ECommerce/Views/Parts/Product.AddToCartFromWishList.cshtml
@@ -14,6 +14,7 @@
                         { "data-call-type", "" },
                         {"enctype", "multipart/form-data"}
                     })) {
+    Script.Require("Nwazet.ProductAvailability").AtFoot();
     <div class="wishlist-addtocart-button">
         <input name="wishListItemId" value="@wishListItemId" type="hidden" />
         <input name="wishListId" value="@wishListId" type="hidden" />
